--- a/.github/workflows/deploy_main.yml
+++ b/.github/workflows/deploy_main.yml
@@ -2,12 +2,12 @@ name: CI/CD PRO
 run-name: ${{ github.workflow }} by @${{ github.actor }}
 
 on:
-  push:
-    tags: v[1-9]+.[0-9]+.[0-9]+
-    branches: main
-
+  create:
+    branches:
+      - master
 jobs:
   pro:
+    if: startsWith(github.ref, 'refs/tags/v') && github.event.ref_type == 'tag'
     name: PRO
     runs-on: ubuntu-latest
     environment:
