--- a/.github/workflows/deploy_main.yml
+++ b/.github/workflows/deploy_main.yml
@@ -2,17 +2,14 @@ name: CI/CD PRO
 run-name: ${{ github.workflow }} by @${{ github.actor }}
 
 on:
-  push:
-    tags: v[1-9]+.[0-9]+.[0-9]+
+  create:
     branches: main
 
 jobs:
   pro:
     name: PRO
     runs-on: ubuntu-latest
-    environment:
-        name: PRO
-    timeout-minutes: 120
+    environment: PRO
     steps:
       - name: Checkout code tag
         uses: actions/checkout@v4
