--- a/.github/workflows/deploy_main.yml
+++ b/.github/workflows/deploy_main.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   pro:
     name: PRO
+    if: startsWith(github.ref, 'refs/tags/v') && github.event.ref_type == 'tag'
     runs-on: ubuntu-latest
     environment: PRO
     steps:
