cambio ref en checkout

--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Checkout code tag
         uses: actions/checkout@v4
         with:
-          ref:  ${{ github.ref }}
+          ref:  ${{ github.ref.replace('refs/tags/', '') }}
