--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,27 +6,9 @@ on:
     tags: v[1-9]+.[0-9]+.[1-9]+
 
 jobs:
-  know_branch_job:
-    name: job
-    runs-on: ubuntu-latest
-    outputs:
-      branchname: ${{ steps.get-branch.outputs.BRANCH_NAME }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-            ref: ${{ github.ref }}
-      - name: Get branch name
-        id: get-branch
-        run: |
-          BRANCH_NAME=$(git branch -r --contains ${{ github.ref }})
-          echo $BRANCH_NAME
-          echo "BRANCH_NAME=$BRANCH_NAME" >> "$GITHUB_OUTPUT"
 
-  pre:
-    name: PRE
-    needs: [know_branch_job]
-    if: ${{ contains(needs.know_branch_job.outputs.branchname,'dev') }}
+  job-on-dev:
+    if: startsWith(github.ref, 'refs/tags/') && github.base_ref == 'dev'
     runs-on: ubuntu-latest
     environment: PRE
     steps:
@@ -35,10 +17,8 @@ jobs:
         with:
           ref:  ${{ github.ref }}
 
-  pro:
-    name: PRO
-    needs: [know_branch_job]
-    if: ${{ contains(needs.know_branch_job.outputs.branchname,'main') }}
+  job-on-main:
+    if: startsWith(github.ref, 'refs/tags/') && github.base_ref == 'main'
     runs-on: ubuntu-latest
     environment: PRO
     steps:
