--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,14 @@ on:
 
 jobs:
 
+  parallel-job:
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          echo github.ref:${{ github.ref }}
+          echo github.base_ref:${{ github.base_ref }}
+
+
   job-on-dev:
     if: startsWith(github.ref, 'refs/tags/') && github.base_ref == 'dev'
     runs-on: ubuntu-latest
