--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo {{ tojson(github.event) }}
+          echo {{ tojson(github.event) }} | jq
 
   # job-on-dev:
   #   if: startsWith(github.ref, 'refs/tags/') && github.base_ref == 'dev'
