--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,9 +9,12 @@ jobs:
 
   parallel-job:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_CONTEXT: ${{ toJson(github) }}
     steps:
       - run: |
-          echo {{ tojson(github.event) }} | jq
+          echo "{{ toJson(github) }}" | jq
+
 
   # job-on-dev:
   #   if: startsWith(github.ref, 'refs/tags/') && github.base_ref == 'dev'
