--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,32 +6,14 @@ on:
     tags: v[1-9]+.[0-9]+.[0-9]+
 
 jobs:
-
-  parallel-job:
+  job1:
     runs-on: ubuntu-latest
+    environment: {{ github.event.base_ref == 'refs/heads/main' ? 'PRO' : 'PRE' }}
     env:
-      GITHUB_CONTEXT: ${{ toJson(github) }}
+      ENTORNO: {{ github.event.base_ref == 'refs/heads/main' ? 'PRO' : 'PRE' }}
     steps:
-      - run: |
-          echo "{{ toJson(github) }}" | jq
-
-
-  # job-on-dev:
-  #   if: startsWith(github.ref, 'refs/tags/') && github.base_ref == 'dev'
-  #   runs-on: ubuntu-latest
-  #   environment: PRE
-  #   steps:
-  #     - name: Checkout code tag
-  #       uses: actions/checkout@v4
-  #       with:
-  #         ref:  ${{ github.ref }}
-
-  # job-on-main:
-  #   if: startsWith(github.ref, 'refs/tags/') && github.base_ref == 'main'
-  #   runs-on: ubuntu-latest
-  #   environment: PRO
-  #   steps:
-  #     - name: Checkout code tag
-  #       uses: actions/checkout@v4
-  #       with:
-  #         ref:  ${{ github.ref }}
+      - run: echo ENTORNO: $ENTORNO
+      - name: Checkout code tag
+        uses: actions/checkout@v4
+        with:
+          ref:  ${{ github.ref }}
