--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,9 +8,9 @@ on:
 jobs:
   job1:
     runs-on: ubuntu-latest
-    environment: {{ github.event.base_ref == 'refs/heads/main' ? 'PRO' : 'PRE' }}
+    environment: {{ github.event.base_ref == 'refs/heads/main' && 'PRO' || 'PRE' }}
     env:
-      ENTORNO: {{ github.event.base_ref == 'refs/heads/main' ? 'PRO' : 'PRE' }}
+      ENTORNO: {{ github.event.base_ref == 'refs/heads/main' && 'PRO' || 'PRE' }}
     steps:
       - run: echo ENTORNO: $ENTORNO
       - name: Checkout code tag
